--- a/style.css
+++ b/style.css
@@ -5,10 +5,12 @@
   
   .main {
     width: 100%;
-    background: linear-gradient(to top,rgba(0, 0, 0, 0.5)50%,rgba(0, 0, 0, 0.5)50%), url('2.jpg');
+    background: linear-gradient(to top,rgba(0, 0, 0, 0.5)50%,rgba(0, 0, 0, 0.5)50%), url('carbg1.jpg');
     background-position: center;
     background-size: cover;
-    height: 100vh;
+    background-attachment: fixed;
+    min-height: 100vh; 
+    padding-bottom: 80px; 
   }
 
   .navbar {
@@ -313,5 +315,87 @@
         color: #ff7200;
         font-family: Georgia, 'Times New Roman', Times, serif;
       }
+
+      .news {
+        width: 1200px;
+        height: auto;
+        margin: auto;
+        padding-top: 100px; /* pushes it down from nav */
+        padding-left: 40px;
+        color: white;
+        position: relative;
+      }
       
+      .news h2 {
+        font-size: 50px;
+        margin-bottom: 10px;
+        margin-top: 6px;
+        margin-left: 4px;
+        font-family: Georgia, 'Times New Roman', Times, serif
+      }
+
+      .news h2 span {
+        color: #ff7200;
+      }
+      
+      .news p.description {
+        padding-top: 20px;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        font-size: 16px;
+        letter-spacing: 1px;
+        line-height: 28px;
+        width: 600px;
+      }
+      
+      .news-card {
+        display: flex;
+        background-color: rgba(0, 0, 0, 0.65);
+        margin-bottom: 25px;
+        border-radius: 6px;
+        overflow: hidden;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.7);
+      }
+      
+      .news-card img {
+        width: 260px;
+        height: 170px;
+        object-fit: cover;
+      }
+      
+      .news-card-content {
+        padding: 25px;
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+      }
+      
+      .news-card-content h3 {
+        font-size: 24px;
+        margin-bottom: 12px;
+        color: #fff;
+      }
+      
+      .news-card-content p {
+        font-size: 16px;
+        color: #fff;
+        line-height: 1.6;
+        margin-bottom: 20px;
+      }
+      
+      .news-card-content a {
+        align-self: flex-start;
+        background-color: #ff7200;
+        color: white;
+        padding: 10px 18px;
+        border-radius: 5px;
+        text-decoration: none;
+        font-weight: bold;
+        transition: all 0.3s ease;
+      }
+      
+      .news-card-content a:hover {
+        background-color: white;
+        color: #ff7200;
+      }
       
